Replace url with uri